Moved Equipment to the Consolidated-Item-sheet.html and rearranged the header to reduce duplication (For example, the category and short notes fields)

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1966,3 +1966,7 @@ attribute-senses {
 	text-align: right;
 	padding-right: 0.5em;
 }
+
+.consolidated-item-sheet-header td {
+	padding: 0.2em 0.4em;
+}
