Fixed custom weapon gun range display

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -2024,7 +2024,7 @@
                         <td>{{ammo.name}}</td>
                         <td>{{ammo.damageInput}} ({{ammo.armourDivisor}}) {{ammo.damageType}}</td>
                         <td>{{ammo.acc}}</td>
-                        <td>{{ammo.range}}</td>
+                        <td>{{ammo.halfRange}} / {{ammo.maxRange}}</td>
                         <td>{{../item.system.firearmDesign.loadedWeight}}</td>
                         <td>{{ammo.rof}}</td>
                         <td>{{ammo.shots}}</td>
