Added flag hints to other attack types

--- a/templates/item/Consolidated-Item-sheet.html
+++ b/templates/item/Consolidated-Item-sheet.html
@@ -1256,6 +1256,14 @@
                                         long: Long Range (Long Distance Modifiers)<br>
                                         staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
+                                        bomba: Bombardment, uses attack's base skill<br>
+                                        bomb#: Bombardment, the number as the skill<br>
+                                        collateral: Collateral hits from a high rof attack.<br>
+                                        yscatter: If the attack normally wouldn't scatter, it does.<br>
+                                        nscatter: If the attack would normally scatter, it doesn't.<br>
+                                        ytargethex: If the attack normally wouldn't get +4 for targeting a hex, it does.<br>
+                                        ntargethex: If the attack would normally get +4 for targeting a hex, it doesn't.<br>
+                                        diss: Dissipation for Area attacks<br>
                                     </div>
                                 </span>
                             </span>
@@ -1392,6 +1400,14 @@
                                         long: Long Range (Long Distance Modifiers)<br>
                                         staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
+                                        bomba: Bombardment, uses attack's base skill<br>
+                                        bomb#: Bombardment, the number as the skill<br>
+                                        collateral: Collateral hits from a high rof attack.<br>
+                                        yscatter: If the attack normally wouldn't scatter, it does.<br>
+                                        nscatter: If the attack would normally scatter, it doesn't.<br>
+                                        ytargethex: If the attack normally wouldn't get +4 for targeting a hex, it does.<br>
+                                        ntargethex: If the attack would normally get +4 for targeting a hex, it doesn't.<br>
+                                        diss: Dissipation for Area attacks<br>
                                     </div>
                                 </span>
                             </span>
